Fix the scrollbar

--- a/src/components/TVShowList/style.module.css
+++ b/src/components/TVShowList/style.module.css
@@ -10,6 +10,7 @@
 .list {
     display: flex;
     overflow-x: hidden;
+    padding-bottom: 20px;
 }
 
 .tv_show_list_item {
