--- a/src/global.css
+++ b/src/global.css
@@ -2,3 +2,12 @@ body {
   color: white;
   font-family: Maximum Impact;
 }
+
+::-webkit-scrollbar{
+
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  bcakground-color: rgba(0,0,0,0.61);
+  border-radius: 10px;
+}
